--- a/teacher_portal/teacher_classrecord.html
+++ b/teacher_portal/teacher_classrecord.html
@@ -3,100 +3,157 @@
 <head>
   <meta charset="UTF-8">
   <title>Grade Sheet</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="teacher_classrecord.css">
 </head>
-<body>
-  
-  <a href="teacher_home.html" class="text-blue-700 hover:underline mb-2 block">&larr; Back to Home</a>
-  <h2>Class Record Grade Sheet</h2>
-  <div class="sheet-box">
-    <!-- Selection Step -->
-    <div id="class-selection">
-      <label class="block mb-2"><b>Select Class:</b></label>
-      <select id="class-select" class="mb-4 p-2 border rounded w-full max-w-xs">
-        <option value="">-- Choose Class --</option>
-        <option value="grade-1">Grade 1</option>
-        <option value="grade-2">Grade 2</option>
-      </select>
-      <label class="block mb-2"><b>Select Subject:</b></label>
-      <select id="subject-select" class="mb-4 p-2 border rounded w-full max-w-xs">
-        <option value="">-- Choose Subject --</option>
-        <option value="math">Math</option>
-        <option value="english">English</option>
-      </select>
-      <button id="start-record-btn" class="bg-blue-700 text-white px-4 py-2 rounded hover:bg-blue-600">Start Recording</button>
-    </div>
-    <!-- Grade Sheet, hidden until class/subject chosen -->
-    <div id="grade-sheet-section" style="display:none;">
-      <div class="mb-4">
-        <span id="sheet-classinfo" class="block font-semibold text-lg"></span>
-        <button id="change-class-btn" class="text-sm text-blue-700 hover:underline">Change class/subject</button>
+<body class="flex min-h-screen bg-[#e7f0fd]">
+  <!-- Sidebar -->
+  <aside id="sidebar" class="sidebar sidebar-gradient">
+    <div>
+      <div class="flex flex-col items-center mb-8 mt-3">
+        <div class="w-20 h-20 rounded-2xl bg-white/30 flex items-center justify-center mb-3 sidebar-avatar">
+          <img src="/teacher_portal/teacher_portal/imag/image.png" alt="Avatar" class="w-16 h-16 rounded-2xl object-cover" />
+        </div>
+        <h2 class="text-lg font-bold tracking-wide text-white text-center mb-1">Name of the School</h2>
+        <div class="mt-1 text-sm text-violet-100 font-semibold">Teacher Portal</div>
       </div>
-      <table id="gradeSheet">
-        <thead>
-          <tr>
-            <th rowspan="2" class="left-head">No.</th>
-            <th rowspan="2" class="student-name-head">Student Name</th>
-            <th colspan="13" class="ww-header">Written Works (40%)</th>
-            <th colspan="13" class="pt-header">Performance Task (40%)</th>
-            <th colspan="3" class="qa-header">Quarterly Assessment (20%)</th>
-            <th rowspan="2">Initial Grade</th>
-            <th rowspan="2">Quarterly Grade</th>
-          </tr>
-          <tr>
-            <th colspan="10">Scores</th>
-            <th>Total</th>
-            <th>PS</th>
-            <th>WS</th>
-            <th colspan="10">Scores</th>
-            <th>Total</th>
-            <th>PS</th>
-            <th>WS</th>
-            <th>Score</th>
-            <th>PS</th>
-            <th>WS</th>
-          </tr>
-          <tr id="highestRow">
-            <td colspan="2" style="font-weight:bold; background:#e7f0fd;">Highest Possible Score</td>
-            <td><input type="number" min="0" class="ww-hps"></td>
-            <td><input type="number" min="0" class="ww-hps"></td>
-            <td><input type="number" min="0" class="ww-hps"></td>
-            <td><input type="number" min="0" class="ww-hps"></td>
-            <td><input type="number" min="0" class="ww-hps"></td>
-            <td><input type="number" min="0" class="ww-hps"></td>
-            <td><input type="number" min="0" class="ww-hps"></td>
-            <td><input type="number" min="0" class="ww-hps"></td>
-            <td><input type="number" min="0" class="ww-hps"></td>
-            <td><input type="number" min="0" class="ww-hps"></td>
-            <td id="ww-total-hps" class="computed"></td>
-            <td id="ww-ps-hps" class="computed">100.00</td>
-            <td id="ww-ws-hps" class="computed">40%</td>
-            <td><input type="number" min="0" class="pt-hps"></td>
-            <td><input type="number" min="0" class="pt-hps"></td>
-            <td><input type="number" min="0" class="pt-hps"></td>
-            <td><input type="number" min="0" class="pt-hps"></td>
-            <td><input type="number" min="0" class="pt-hps"></td>
-            <td><input type="number" min="0" class="pt-hps"></td>
-            <td><input type="number" min="0" class="pt-hps"></td>
-            <td><input type="number" min="0" class="pt-hps"></td>
-            <td><input type="number" min="0" class="pt-hps"></td>
-            <td><input type="number" min="0" class="pt-hps"></td>
-            <td id="pt-total-hps" class="computed"></td>
-            <td id="pt-ps-hps" class="computed">100.00</td>
-            <td id="pt-ws-hps" class="computed">40%</td>
-            <td><input type="number" min="0" class="qa-hps"></td>
-            <td id="qa-ps-hps" class="computed">100.00</td>
-            <td id="qa-ws-hps" class="computed">20%</td>
-            <td class="computed"></td>
-            <td class="computed"></td>
-          </tr>
-        </thead>
-        <tbody id="sheetBody">
-          <!-- Student rows inserted here by JS -->
-        </tbody>
-      </table>
+      <nav>
+        <ul class="mt-6">
+          <li class="sidebar-menu" id="home-tab">
+            <span class="icon">
+              <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
+                <path d="M3 9.5L12 3L21 9.5V20C21 20.55 20.55 21 20 21H4C3.45 21 3 20.55 3 20V9.5Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                <path d="M9 21V12H15V21" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+              </svg>
+            </span>
+            <span>Home</span>
+          </li>
+          <li class="sidebar-menu" id="class-tab">
+            <span class="icon">
+              <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
+                <rect x="3" y="7" width="18" height="13" rx="2" stroke="currentColor" stroke-width="2"/>
+                <path d="M16 3H8V7H16V3Z" stroke="currentColor" stroke-width="2"/>
+              </svg>
+            </span>
+            <span>Class</span>
+          </li>
+          <li class="sidebar-menu sidebar-active" id="class-record-tab">
+            <span class="icon">
+              <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
+                <rect x="3" y="5" width="18" height="14" rx="2" stroke="currentColor" stroke-width="2"/>
+                <path d="M7 3V7" stroke="currentColor" stroke-width="2"/>
+                <path d="M17 3V7" stroke="currentColor" stroke-width="2"/>
+              </svg>
+            </span>
+            <span>Class Record</span>
+          </li>
+          <li class="sidebar-menu" id="announcement-tab">
+            <span class="icon">
+              <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
+                <path d="M12 19C15.3137 19 18 16.3137 18 13C18 9.68629 15.3137 7 12 7C8.68629 7 6 9.68629 6 13C6 16.3137 8.68629 19 12 19Z" stroke="currentColor" stroke-width="2"/>
+                <path d="M12 3V7" stroke="currentColor" stroke-width="2"/>
+              </svg>
+            </span>
+            <span>Announcement</span>
+          </li>
+        </ul>
+      </nav>
     </div>
-  </div>
+    <div class="mb-2 px-3">
+      <button id="logout-btn" class="sidebar-logout w-full py-2">Log out</button>
+    </div>
+  </aside>
+
+  <main id="main-content" class="flex-1">
+    <div class="sheet-box">
+      <!-- Selection Step -->
+      <div id="class-selection">
+        <label class="block mb-2"><b>Select Class:</b></label>
+        <select id="class-select" class="mb-4 p-2 border rounded w-full max-w-xs">
+          <option value="">-- Choose Class --</option>
+          <option value="grade-1">Grade 1</option>
+          <option value="grade-2">Grade 2</option>
+        </select>
+        <label class="block mb-2"><b>Select Subject:</b></label>
+        <select id="subject-select" class="mb-4 p-2 border rounded w-full max-w-xs">
+          <option value="">-- Choose Subject --</option>
+          <option value="math">Math</option>
+          <option value="english">English</option>
+        </select>
+        <button id="start-record-btn" class="bg-blue-700 text-white px-4 py-2 rounded hover:bg-blue-600">Start Recording</button>
+      </div>
+      <!-- Grade Sheet, hidden until class/subject chosen -->
+      <div id="grade-sheet-section" style="display:none;">
+        <div class="mb-4">
+          <span id="sheet-classinfo" class="block font-semibold text-lg"></span>
+          <button id="change-class-btn" class="text-sm text-blue-700 hover:underline">Change class/subject</button>
+        </div>
+        <table id="gradeSheet">
+          <thead>
+            <tr>
+              <th rowspan="2" class="left-head">No.</th>
+              <th rowspan="2" class="student-name-head">Student Name</th>
+              <th colspan="13" class="ww-header">Written Works (40%)</th>
+              <th colspan="13" class="pt-header">Performance Task (40%)</th>
+              <th colspan="3" class="qa-header">Quarterly Assessment (20%)</th>
+              <th rowspan="2">Initial Grade</th>
+              <th rowspan="2">Quarterly Grade</th>
+            </tr>
+            <tr>
+              <th colspan="10">Scores</th>
+              <th>Total</th>
+              <th>PS</th>
+              <th>WS</th>
+              <th colspan="10">Scores</th>
+              <th>Total</th>
+              <th>PS</th>
+              <th>WS</th>
+              <th>Score</th>
+              <th>PS</th>
+              <th>WS</th>
+            </tr>
+            <tr id="highestRow">
+              <td colspan="2" style="font-weight:bold; background:#e7f0fd;">Highest Possible Score</td>
+              <td><input type="number" min="0" class="ww-hps"></td>
+              <td><input type="number" min="0" class="ww-hps"></td>
+              <td><input type="number" min="0" class="ww-hps"></td>
+              <td><input type="number" min="0" class="ww-hps"></td>
+              <td><input type="number" min="0" class="ww-hps"></td>
+              <td><input type="number" min="0" class="ww-hps"></td>
+              <td><input type="number" min="0" class="ww-hps"></td>
+              <td><input type="number" min="0" class="ww-hps"></td>
+              <td><input type="number" min="0" class="ww-hps"></td>
+              <td><input type="number" min="0" class="ww-hps"></td>
+              <td id="ww-total-hps" class="computed"></td>
+              <td id="ww-ps-hps" class="computed">100.00</td>
+              <td id="ww-ws-hps" class="computed">40%</td>
+              <td><input type="number" min="0" class="pt-hps"></td>
+              <td><input type="number" min="0" class="pt-hps"></td>
+              <td><input type="number" min="0" class="pt-hps"></td>
+              <td><input type="number" min="0" class="pt-hps"></td>
+              <td><input type="number" min="0" class="pt-hps"></td>
+              <td><input type="number" min="0" class="pt-hps"></td>
+              <td><input type="number" min="0" class="pt-hps"></td>
+              <td><input type="number" min="0" class="pt-hps"></td>
+              <td><input type="number" min="0" class="pt-hps"></td>
+              <td><input type="number" min="0" class="pt-hps"></td>
+              <td id="pt-total-hps" class="computed"></td>
+              <td id="pt-ps-hps" class="computed">100.00</td>
+              <td id="pt-ws-hps" class="computed">40%</td>
+              <td><input type="number" min="0" class="qa-hps"></td>
+              <td id="qa-ps-hps" class="computed">100.00</td>
+              <td id="qa-ws-hps" class="computed">20%</td>
+              <td class="computed"></td>
+              <td class="computed"></td>
+            </tr>
+          </thead>
+          <tbody id="sheetBody">
+            <!-- Student rows inserted here by JS -->
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </main>
   <script src="teacher_classrecord.js"></script>
 </body>
 </html>
