--- a/teacher_portal/teacher_dashboard.html
+++ b/teacher_portal/teacher_dashboard.html
@@ -183,7 +183,7 @@
     };
     document.getElementById('announcement-tab').onclick = function() {
       setActiveSidebar('announcement-tab');
-      window.location.href = "teacher_dashboard.html#announcement";
+      window.location.href = "teacher_announcement.html";
     };
 
     // Logout
