--- a/teacher_portal/teacher_classrecord.html
+++ b/teacher_portal/teacher_classrecord.html
@@ -4,23 +4,22 @@
   <meta charset="UTF-8">
   <title>Grade Sheet</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="teacher_classrecord.css">
+  <link rel="stylesheet" href="teacher_classrecord.css" />
 </head>
-<body class="flex min-h-screen bg-[#e7f0fd]">
-  <!-- Sidebar -->
-  <aside id="sidebar" class="sidebar sidebar-gradient">
-    <div>
-      <div class="flex flex-col items-center mb-8 mt-3">
-        <div class="w-20 h-20 rounded-2xl bg-white/30 flex items-center justify-center mb-3 sidebar-avatar">
-          <img src="/teacher_portal/teacher_portal/imag/image.png" alt="Avatar" class="w-16 h-16 rounded-2xl object-cover" />
+<body>
+  <aside class="sidebar">
+    <div class="sidebar-top">
+      <div class="sidebar-logo-box">
+        <img src="/teacher_portal/teacher_portal/imag/logo.png" alt="School Logo" class="sidebar-logo" />
+        <div class="sidebar-school-name">
+          EASTERN PANGASINAN CHRISTIAN LEARNING CENTER, INC.
         </div>
-        <h2 class="text-lg font-bold tracking-wide text-white text-center mb-1">Name of the School</h2>
-        <div class="mt-1 text-sm text-violet-100 font-semibold">Teacher Portal</div>
       </div>
       <nav>
-        <ul class="mt-6">
-          <li class="sidebar-menu" id="home-tab">
+        <ul class="sidebar-nav">
+          <li class="sidebar-link active" id="home-tab">
             <span class="icon">
+              <!-- Home Icon -->
               <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
                 <path d="M3 9.5L12 3L21 9.5V20C21 20.55 20.55 21 20 21H4C3.45 21 3 20.55 3 20V9.5Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 <path d="M9 21V12H15V21" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -28,8 +27,9 @@
             </span>
             <span>Home</span>
           </li>
-          <li class="sidebar-menu" id="class-tab">
+          <li class="sidebar-link" id="class-tab">
             <span class="icon">
+              <!-- Class Icon -->
               <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
                 <rect x="3" y="7" width="18" height="13" rx="2" stroke="currentColor" stroke-width="2"/>
                 <path d="M16 3H8V7H16V3Z" stroke="currentColor" stroke-width="2"/>
@@ -37,8 +37,9 @@
             </span>
             <span>Class</span>
           </li>
-          <li class="sidebar-menu sidebar-active" id="class-record-tab">
+          <li class="sidebar-link" id="class-record-tab">
             <span class="icon">
+              <!-- Record Icon -->
               <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
                 <rect x="3" y="5" width="18" height="14" rx="2" stroke="currentColor" stroke-width="2"/>
                 <path d="M7 3V7" stroke="currentColor" stroke-width="2"/>
@@ -47,8 +48,9 @@
             </span>
             <span>Class Record</span>
           </li>
-          <li class="sidebar-menu" id="announcement-tab">
+          <li class="sidebar-link" id="announcement-tab">
             <span class="icon">
+              <!-- Announcement Icon -->
               <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
                 <path d="M12 19C15.3137 19 18 16.3137 18 13C18 9.68629 15.3137 7 12 7C8.68629 7 6 9.68629 6 13C6 16.3137 8.68629 19 12 19Z" stroke="currentColor" stroke-width="2"/>
                 <path d="M12 3V7" stroke="currentColor" stroke-width="2"/>
@@ -59,12 +61,21 @@
         </ul>
       </nav>
     </div>
-    <div class="mb-2 px-3">
-      <button id="logout-btn" class="sidebar-logout w-full py-2">Log out</button>
+    <div class="sidebar-bottom">
+      <button id="logout-btn" class="sidebar-logout">
+        <span class="icon">
+          <!-- Logout Icon -->
+          <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
+            <path d="M16 17L21 12L16 7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M21 12H9" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+            <path d="M4 4V20" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          </svg>
+        </span>
+        <span>Log out</span>
+      </button>
     </div>
   </aside>
-
-  <main id="main-content" class="flex-1">
+  <main>
     <div class="sheet-box">
       <!-- Selection Step -->
       <div id="class-selection">
