here na langgggg

--- a/teacher_portal/teacher_class.html
+++ b/teacher_portal/teacher_class.html
@@ -17,7 +17,8 @@
         <div class="w-20 h-20 rounded-2xl bg-white/30 flex items-center justify-center mb-3 sidebar-avatar">
           <img src="/teacher_portal/teacher_portal/imag/logo.png" alt="Avatar" class="w-18 h-18 rounded-2xl object-cover" />
         </div>
-        <h2 class="text-lg font-bold tracking-wide text-white text-center mb-1"> EASTERN PANGASINAN CHRISTIAN LEARNING CENTER, INC.</h2>
+        <h2 class="text-lg font-bold tracking-wide text-white text-center mb-1">Name of the School</h2>
+        <div class="mt-1 text-sm text-violet-100 font-semibold">Teacher Portal</div>
       </div>
       <nav>
         <ul class="mt-6">
