--- a/teacher_portal/teacher_announcement.html
+++ b/teacher_portal/teacher_announcement.html
@@ -10,16 +10,16 @@
 <body class="bg-[#edeaff] min-h-screen font-sans">
   <div class="flex h-screen">
     <!-- Sidebar (fixed, never scrolls) -->
-    <aside id="sidebar" class="sidebar sidebar-gradient text-white flex flex-col justify-between py-7 px-4 relative">
-      <div>
-        <div class="flex flex-col items-center mb-8 mt-3">
+    <aside id="sidebar" class="sidebar sidebar-gradient text-white flex flex-col relative">
+      <div class="sidebar-content">
+        <div class="flex flex-col items-center mt-6 mb-5">
           <div class="w-20 h-20 rounded-2xl bg-white/30 flex items-center justify-center mb-3 sidebar-avatar">
             <img src="/teacher_portal/teacher_portal/imag/logo.png" alt="Avatar" class="w-18 h-18 rounded-2xl object-cover" />
           </div>
-          <h2 class="text-lg font-bold tracking-wide text-white text-center mb-1"> EASTERN PANGASINAN CHRISTIAN LEARNING CENTER, INC.</h2>
         </div>
+        <h2 class="sidebar-school text-lg font-bold tracking-wide text-white text-center mb-3">EASTERN PANGASINAN CHRISTIAN LEARNING CENTER, INC.</h2>
         <nav>
-          <ul class="space-y-1 mt-6">
+          <ul class="space-y-1 mt-2">
             <li class="sidebar-menu flex items-center py-3 px-3 rounded-2xl" id="home-tab">
               <span class="icon mr-3"><svg width="22" height="22" viewBox="0 0 24 24" fill="none">
                 <path d="M3 9.5L12 3L21 9.5V20C21 20.55 20.55 21 20 21H4C3.45 21 3 20.55 3 20V9.5Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -48,14 +48,14 @@
           </ul>
         </nav>
       </div>
-      <div class="mb-2">
-        <button id="logout-btn" class="sidebar-logout w-full py-2">Logout</button>
+      <div class="sidebar-logout-container">
+        <button id="logout-btn" class="sidebar-logout">Logout</button>
       </div>
     </aside>
 
     <!-- Main Content Area: scrollable posting box and announcements together -->
     <main class="flex-1 h-screen overflow-hidden">
-      <div class="w-full max-w-2xl mx-auto h-full flex flex-col">
+      <div class="w-full max-w-3xl mx-auto h-full flex flex-col">
         <h1 class="text-3xl font-bold text-violet-800 my-6">Announcements</h1>
         <div class="flex-1 min-h-0 overflow-y-auto">
           <!-- Posting box -->
