--- a/teacher_portal/teacher_home.html
+++ b/teacher_portal/teacher_home.html
@@ -6,346 +6,77 @@
   <title>Teacher Home</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css"/>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.5/index.global.min.css" />
-  <style>
-    body {
-      background: #e0f2fe !important;
-      font-family: 'Inter', sans-serif;
-    }
-    .sidebar-gradient {
-      background: linear-gradient(180deg, #38bdf8 0%, #2563eb 100%);
-    }
-    .sidebar {
-      min-width: 230px;
-      max-width: 260px;
-      border-radius: 32px;
-      box-shadow: 6px 0 32px 0 rgba(37,99,235,0.10);
-      margin: 24px;
-      height: calc(100vh - 48px);
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-    .sidebar-avatar {
-      border: 5px solid #e0f2fe;
-      box-shadow: 0 2px 12px 0 rgba(37,99,235,0.10);
-      border-radius: 24px;
-    }
-    .sidebar-menu {
-      transition: background 0.2s, padding-left 0.3s, color 0.2s;
-      cursor: pointer;
-      padding-left: 1.25rem;
-      border-radius: 9999px;
-      font-weight: 500;
-      display: flex;
-      align-items: center;
-      margin-bottom: 2px;
-      color: #e0f2fe;
-      background: transparent;
-      min-height: 48px;
-    }
-    .sidebar-menu .icon {
-      margin-right: 1rem;
-    }
-    .sidebar-menu svg {
-      display: inline-block;
-      vertical-align: middle;
-    }
-    .sidebar-menu.sidebar-active, .sidebar-menu:active, .sidebar-menu:focus, .sidebar-menu:hover {
-      background: linear-gradient(90deg, #2563eb 70%, #38bdf8 100%);
-      color: #fff;
-      font-weight: bold;
-      padding-left: 2rem;
-    }
-    .sidebar-logout {
-      color: #38bdf8;
-      background: #e0f2fe;
-      font-weight: bold;
-      border-radius: 9999px;
-      transition: background 0.2s, color 0.2s;
-    }
-    .sidebar-logout:hover {
-      background: #2563eb;
-      color: #fff;
-    }
-    /* Responsive adjustments */
-    @media (max-width: 900px) {
-      .sidebar {
-        margin: 0;
-        border-radius: 0 32px 32px 0;
-        min-width: 70px;
-        max-width: 85px;
-        padding-left: 0.5rem;
-        padding-right: 0.5rem;
-      }
-      .sidebar-menu span:not(.icon) {
-        display: none;
-      }
-      .sidebar-menu {
-        justify-content: center;
-        padding-left: 0.5rem;
-      }
-    }
-
-    /* Oval Announcement & Home Styles */
-    .oval-box {
-      border-radius: 9999px;
-      background: linear-gradient(90deg, #38bdf8 70%, #2563eb 100%);
-      color: #fff;
-      padding: 0.5rem 1.5rem;
-      display: inline-block;
-      margin-bottom: 0.5rem;
-      font-weight: 500;
-      box-shadow: 0 2px 6px rgba(37, 99, 235, 0.08);
-      text-align: center;
-      width: fit-content;
-      max-width: 100%;
-      word-break: break-word;
-    }
-    /* Center the welcome section content */
-    .welcome-section {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      width: 100%;
-      text-align: center;
-    }
-    .animate-blink {
-      animation: blink 1.2s steps(1, end) infinite;
-    }
-    @keyframes blink {
-      0%,100% { opacity: 1; }
-      50% { opacity: 0; }
-    }
-    /* Announcement adjustments */
-    #announcement-box {
-      background: linear-gradient(135deg, #bae6fd 0%, #e0f2fe 100%);
-      border-radius: 2rem;
-    }
-  </style>
+  <link rel="stylesheet" href="teacher_home.css" />
 </head>
-<body class="flex min-h-screen">
+<body class="bg-blue-100 font-sans">
+  <div class="layout-container flex min-h-screen">
 
-  <!-- Sidebar -->
-  <aside id="sidebar" class="sidebar sidebar-gradient text-white">
-    <div>
-      <div class="flex flex-col items-center mb-8 mt-3">
-        <div class="w-20 h-20 rounded-2xl bg-white/30 flex items-center justify-center mb-3 sidebar-avatar">
-          <img src="/teacher_portal/teacher_portal/imag/logo.png" alt="Avatar" class="w-18 h-18 rounded-2xl object-cover" />
+    <!-- Sidebar -->
+    <aside id="sidebar" class="sidebar sidebar-gradient text-white flex flex-col justify-between">
+      <div>
+        <div class="flex flex-col items-center mb-8 mt-3">
+          <div class="w-20 h-20 rounded-2xl bg-white/30 flex items-center justify-center mb-3 sidebar-avatar">
+            <img src="/teacher_portal/teacher_portal/imag/logo.png" alt="Avatar" class="w-18 h-18 rounded-2xl object-cover" />
+          </div>
+          <h2 class="text-lg font-bold tracking-wide text-white text-center mb-1">SCHOOL<br><span class="text-xs font-normal">Teacher Portal</span></h2>
         </div>
-        <h2 class="text-lg font-bold tracking-wide text-white text-center mb-1"> EASTERN PANGASINAN CHRISTIAN LEARNING CENTER, INC.</h2>
+        <nav>
+          <ul class="mt-6">
+            <li class="sidebar-menu sidebar-active" id="home-tab"><span>Home</span></li>
+            <li class="sidebar-menu" id="class-tab"><span>Class</span></li>
+            <li class="sidebar-menu" id="class-record-tab"><span>Class Record</span></li>
+            <li class="sidebar-menu" id="announcement-tab"><span>Announcement</span></li>
+          </ul>
+        </nav>
       </div>
-      <nav>
-        <ul class="mt-6">
-          <li class="sidebar-menu sidebar-active" id="home-tab">
-            <span class="icon">
-              <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
-                <path d="M3 9.5L12 3L21 9.5V20C21 20.55 20.55 21 20 21H4C3.45 21 3 20.55 3 20V9.5Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M9 21V12H15V21" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-              </svg>
-            </span>
-            <span>Home</span>
-          </li>
-          <li class="sidebar-menu" id="class-tab">
-            <span class="icon">
-              <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
-                <rect x="3" y="7" width="18" height="13" rx="2" stroke="currentColor" stroke-width="2"/>
-                <path d="M16 3H8V7H16V3Z" stroke="currentColor" stroke-width="2"/>
-              </svg>
-            </span>
-            <span>Class</span>
-          </li>
-          <li class="sidebar-menu" id="class-record-tab">
-            <span class="icon">
-              <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
-                <rect x="3" y="5" width="18" height="14" rx="2" stroke="currentColor" stroke-width="2"/>
-                <path d="M7 3V7" stroke="currentColor" stroke-width="2"/>
-                <path d="M17 3V7" stroke="currentColor" stroke-width="2"/>
-              </svg>
-            </span>
-            <span>Class Record</span>
-          </li>
-          <li class="sidebar-menu" id="announcement-tab">
-            <span class="icon">
-              <svg width="22" height="22" viewBox="0 0 24 24" fill="none">
-                <path d="M12 19C15.3137 19 18 16.3137 18 13C18 9.68629 15.3137 7 12 7C8.68629 7 6 9.68629 6 13C6 16.3137 8.68629 19 12 19Z" stroke="currentColor" stroke-width="2"/>
-                <path d="M12 3V7" stroke="currentColor" stroke-width="2"/>
-              </svg>
-            </span>
-            <span>Announcement</span>
-          </li>
-        </ul>
-      </nav>
-    </div>
-    <div class="mb-2 px-3">
-      <button id="logout-btn" class="sidebar-logout w-full py-2">Log out</button>
-    </div>
-  </aside>
+      <div class="mb-2 px-3">
+        <button id="logout-btn" class="sidebar-logout w-full py-2">Log out</button>
+      </div>
+    </aside>
 
-  <!-- Main Content Area -->
-  <main id="main-content" class="flex-1 flex flex-col items-center justify-center p-8">
-    <div class="flex flex-col items-center justify-center w-full">
-      <!-- HOME DASHBOARD -->
-      <section class="welcome-section border-4 border-blue-300 bg-blue-50 rounded-3xl w-full max-w-3xl mb-6 p-8 flex flex-col items-center shadow-xl">
-        <h1 class="text-5xl font-bold text-blue-700 mb-2">Welcome</h1>
-        <div class="text-3xl text-blue-600 font-bold tracking-wide flex flex-col items-center">
-          <span class="oval-box mb-2">Great Morning, <span id="teacher-name" class="font-bold">Jed</span></span>
-          <span class="animate-blink text-blue-700 font-bold text-2xl">......</span>
-        </div>
-      </section>
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-8 w-full max-w-4xl mx-auto">
-        <!-- Announcement Box -->
-        <section id="announcement-box" class="border-4 border-blue-300 bg-white/90 rounded-2xl p-6 min-h-[230px] flex flex-col shadow-lg">
-          <div class="text-xl font-bold text-blue-700 mb-3">Announcement</div>
-          <div id="announcement-content" class="flex-1 flex flex-col justify-center">
-            <div class="text-gray-400 italic">No announcement</div>
+    <!-- Main Content Area -->
+    <main id="main-content" class="flex-1 flex flex-col items-center justify-center p-8">
+      <div class="main-grid w-full max-w-6xl">
+        <!-- Welcome -->
+        <section id="welcome-section" class="welcome-section border-4 border-blue-300 bg-blue-50 rounded-3xl mb-6 p-8 flex flex-col items-center shadow-xl col-span-2">
+          <h1 class="text-5xl font-bold text-blue-700 mb-2">WELCOME</h1>
+        </section>
+        <!-- Announcement -->
+        <section id="announcement-box" class="announcement-box border-4 border-blue-300 bg-white/90 rounded-2xl py-8 px-4 flex flex-col shadow-xl mb-3 w-full mx-auto" style="max-width: 850px;">
+          <div class="text-2xl font-bold text-blue-700 mb-3 text-center">Announcement</div>
+          <div id="announcement-content" class="flex-1 flex flex-col justify-center gap-1"></div>
+        </section>
+        <!-- Calendar -->
+        <section id="calendar-box" class="border-4 border-blue-300 bg-white/90 rounded-2xl p-6 shadow-lg">
+          <div class="text-xl font-bold text-blue-700 mb-2 border-b border-blue-200 pb-1 text-center uppercase">Calendar</div>
+          <div id="calendar" class="w-full"></div>
+        </section>
+        <!-- QR Scan -->
+        <section id="qr-box" class="border-4 border-blue-300 bg-white/90 rounded-2xl p-6 shadow-lg mb-6 flex flex-col items-center">
+          <div class="text-xl font-bold text-blue-700 mb-2 border-b border-blue-200 pb-1 text-center uppercase w-full">Scan QR</div>
+          <div id="qr-reader-section" class="w-full flex flex-col items-center">
+            <button id="start-qr-btn" class="px-4 py-2 bg-blue-600 text-white rounded-lg font-bold hover:bg-blue-700 mb-4">Start QR Scan</button>
+            <div id="qr-reader" style="width: 220px; min-height: 180px;" class="hidden"></div>
+            <div id="qr-result" class="mt-4 text-green-700 font-bold"></div>
           </div>
         </section>
-        <!-- Calendar + Badge Column -->
-        <div class="flex flex-col gap-8">
-          <!-- Calendar Box -->
-          <section class="border-4 border-blue-300 bg-white/90 rounded-2xl p-6 mb-3 shadow-lg">
-            <div class="text-xl font-bold text-blue-700 mb-2 border-b border-blue-200 pb-1 text-center uppercase">Calendar</div>
-            <div id="calendar" class="w-full"></div>
-          </section>
-          <!-- Badge Box -->
-          <section class="border-4 border-blue-300 bg-white/90 rounded-2xl p-6 flex flex-col items-center shadow-lg">
-            <div class="text-xl font-bold text-blue-700 mb-2 border-b border-blue-200 pb-1 text-center uppercase w-full">Badge</div>
-            <div id="badge-stars" class="flex items-center gap-4 pt-2 w-full justify-center"></div>
-          </section>
-        </div>
+        <!-- Badge (now under QR box) -->
+        <section id="badge-box" class="border-4 border-blue-300 bg-white/90 rounded-2xl p-6 flex flex-col items-center shadow-lg">
+          <div class="text-xl font-bold text-blue-700 mb-2 border-b border-blue-200 pb-1 text-center uppercase w-full">Badge</div>
+          <div id="badge-stars" class="flex items-center gap-4 pt-2 w-full justify-center"></div>
+        </section>
       </div>
-    </div>
-  </main>
+    </main>
+  </div>
 
-  <!-- Scripts -->
+  <!-- Lightbox Modal for Images (hidden by default) -->
+  <div id="img-lightbox-modal" class="fixed inset-0 bg-black bg-opacity-70 flex items-center justify-center z-50 hidden">
+    <span id="img-lightbox-close" class="absolute top-6 right-10 text-white text-4xl cursor-pointer">&times;</span>
+    <img id="img-lightbox-img" class="max-h-[90vh] max-w-[90vw] rounded-xl shadow-2xl border-8 border-white" src="" alt="Announcement Full Image" />
+  </div>
+
   <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.5/index.global.min.js"></script>
-  <script>
-    // Sidebar navigation (with highlighting)
-    function setActiveSidebar(tabId) {
-      document.querySelectorAll('.sidebar-menu').forEach(el => el.classList.remove('sidebar-active'));
-      document.getElementById(tabId).classList.add('sidebar-active');
-    }
-    document.getElementById('home-tab').onclick = function() {
-      setActiveSidebar('home-tab');
-      window.location.href = "teacher_home.html";
-    };
-    document.getElementById('class-tab').onclick = function() {
-      setActiveSidebar('class-tab');
-      window.location.href = "teacher_class.html";
-    };
-    document.getElementById('class-record-tab').onclick = function() {
-      setActiveSidebar('class-record-tab');
-      window.location.href = "teacher_classrecord.html";
-    };
-    document.getElementById('announcement-tab').onclick = function() {
-      setActiveSidebar('announcement-tab');
-      window.location.href = "teacher_announcement.html";
-    };
-
-    // Logout
-    document.getElementById('logout-btn').onclick = function () {
-      alert('You have been logged out.');
-      window.location.reload();
-    };
-
-    // Set teacher name
-    document.getElementById('teacher-name').textContent = 'Jed';
-
-    // Announcement logic
-    function getAnnouncements() {
-      try {
-        return JSON.parse(localStorage.getItem("announcements") || "[]");
-      } catch (e) {
-        return [];
-      }
-    }
-    function renderLatestAnnouncement() {
-      const container = document.getElementById('announcement-content');
-      const announcements = getAnnouncements();
-      container.innerHTML = '';
-      if (!announcements.length) {
-        container.innerHTML = '<div class="text-gray-400 italic">No announcement</div>';
-        return;
-      }
-      const a = announcements[0];
-      if (a.title) {
-        const t = document.createElement('div');
-        t.className = "oval-box text-lg mb-1";
-        t.textContent = a.title;
-        container.appendChild(t);
-      }
-      if (a.grade) {
-        const c = document.createElement('div');
-        c.className = "oval-box italic text-blue-700 text-sm mb-2";
-        c.textContent = `For: ${a.grade}`;
-        container.appendChild(c);
-      }
-      if (a.message && a.message.trim()) {
-        const p = document.createElement('div');
-        p.className = "oval-box mb-2";
-        p.innerHTML = a.message.replace(/\n/g, '<br>');
-        container.appendChild(p);
-      }
-      if (a.images && a.images.length) {
-        const mediaDiv = document.createElement('div');
-        mediaDiv.className = "flex flex-wrap gap-2 mb-2";
-        a.images.forEach(m => {
-          if (m.type && m.type.startsWith("image/")) {
-            const img = document.createElement('img');
-            img.src = m.dataUrl;
-            img.alt = "announcement image";
-            img.className = "max-h-32 max-w-xs rounded shadow";
-            mediaDiv.appendChild(img);
-          }
-        });
-        container.appendChild(mediaDiv);
-      }
-      const time = document.createElement('div');
-      time.className = "text-xs text-gray-400 mt-2";
-      time.textContent = a.time ? new Date(a.time).toLocaleString() : '';
-      container.appendChild(time);
-    }
-
-    document.addEventListener('DOMContentLoaded', function() {
-      renderLatestAnnouncement();
-
-      // Initialize calendar
-      if (document.getElementById('calendar')) {
-        document.getElementById('calendar').innerHTML = '';
-        const calendarEl = document.getElementById('calendar');
-        const calendar = new FullCalendar.Calendar(calendarEl, {
-          initialView: 'dayGridMonth',
-          height: 240,
-        });
-        calendar.render();
-      }
-
-      // Badge stars
-      const badgeDiv = document.getElementById("badge-stars");
-      if (badgeDiv) {
-        badgeDiv.innerHTML = '';
-        for (let i = 0; i < 5; i++) {
-          let star = document.createElementNS("http://www.w3.org/2000/svg", "svg");
-          star.setAttribute("viewBox", "0 0 50 50");
-          star.setAttribute("width", "34");
-          star.setAttribute("height", "34");
-          star.innerHTML = `
-            <polygon points="25,5 31,19 46,19 34,29 39,44 25,35 11,44 16,29 4,19 19,19"
-              fill="#fff" stroke="#2563eb" stroke-width="4"/>
-            <polygon points="25,10 30,20 41,20 33,27 36,38 25,32 14,38 17,27 9,20 20,20"
-              fill="#38bdf8" stroke="#2563eb" stroke-width="2"/>
-          `;
-          badgeDiv.appendChild(star);
-        }
-      }
-    });
-
-    window.addEventListener('storage', function(e) {
-      if (e.key === "announcements") {
-        renderLatestAnnouncement();
-      }
-    });
-  </script>
+  <script src="https://unpkg.com/html5-qrcode"></script>
+  <script src="teacher_home.js"></script>
 </body>
 </html>
